fix on ios

--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -4,6 +4,7 @@
   position: absolute;
   top: -31px;
   right: 0;
+  padding: 0;
   background-color: rgba(0, 0, 0, 0);
   border: none;
   background-image: url("../../../images/close_icon.svg");
