--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,6 +7,7 @@
   width: 18px;
   height: 18px;
   border: white 1px solid;
+  padding: 0;
   position: absolute;
   top: 8px;
   right: 0;
